tests/test-freestyle-format.expected
FAILED  : 

Demonstrate error expectation (Intentional fail.)

Location: test-freestyle-format.markdown, line 62
Function: Cat
Impl    : shell command "python3 cat.py"
Body    : meow
Expected: error:
woof
Actual  : output:
meow

FAILED  : 

Demonstrate error expectation (Intentional fail.)

Location: test-freestyle-format.markdown, line 65
Function: Cat
Impl    : shell command "python3 cat.py"
Body    : meow
Expected: error:
woof
Actual  : output:
meow

FAILED  : 

Demonstrate error expectation (Intentional fail.)

Location: test-freestyle-format.markdown, line 68
Function: Cat
Impl    : shell command "python3 cat.py"
Body    : 
| meow
? rreoww
Expected: error:
bow
wow
Actual  : output:
| meow
? rreoww

FAILED  : 

The trick of re-using the previous test body with a different
test input if the test body is omitted doesn't work with
freestyle-format test input sections (i.e., this will fail.)

Location: test-freestyle-format.markdown, line 111
Function: Silly Interpreter
Impl    : shell command "python3 silly-interpreter.py %(test-body-file)"
Body    : 
Expected: output:
zang
zing
Actual  : output:


--------------------------------
Total test runs: 14, failures: 4
--------------------------------
